--- a/gulby/코딩도장_350.ipynb
+++ b/gulby/코딩도장_350.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -19,6 +19,151 @@
     "    if i % 3 == 0 or i % 5 == 0:\n",
     "        result += i\n",
     "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "233168\n"
+     ]
+    }
+   ],
+   "source": [
+    "def func_350(n):\n",
+    "    result = 0\n",
+    "    for i in range(n):\n",
+    "        if i % 3 == 0 or i % 5 == 0:\n",
+    "            result += i\n",
+    "    return result\n",
+    "\n",
+    "print(func_350(1000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def func_350_tuning(n):\n",
+    "    return n * (n + 1) / 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0000000000005e+25\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(func_350_tuning(10000000000000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "166833.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "result_3 = 3 * func_350_tuning(int(1000/3))\n",
+    "print(result_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100500.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "result_5 = 5 * func_350_tuning(int(1000/5))\n",
+    "print(result_5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33165.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "result_15 = 15 * func_350_tuning(int(1000/15))\n",
+    "print(result_15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "234168.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = result_3 + result_5 - result_15\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2333333416666668.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def answer(n):\n",
+    "    result_3 = 3 * func_350_tuning(int(n/3))\n",
+    "    result_5 = 5 * func_350_tuning(int(n/5))\n",
+    "    result_15 = 15 * func_350_tuning(int(n/15))\n",
+    "    return result_3 + result_5 - result_15\n",
+    "print(answer(100000000))"
    ]
   }
  ],
