--- a/gulby/코딩도장_350.ipynb
+++ b/gulby/코딩도장_350.ipynb
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -164,6 +164,23 @@
     "    result_15 = 15 * func_350_tuning(int(n/15))\n",
     "    return result_3 + result_5 - result_15\n",
     "print(answer(100000000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "마마마ㅏ\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('마마마ㅏ')"
    ]
   }
  ],
