--- a/gulby/코딩도장_350.ipynb
+++ b/gulby/코딩도장_350.ipynb
@@ -168,19 +168,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "마마마ㅏ\n"
+      "마마마\n"
      ]
     }
    ],
    "source": [
-    "print('마마마ㅏ')"
+    "print('마마마')"
    ]
   }
  ],
