--- a/leehyunsoo/exam_350.ipynb
+++ b/leehyunsoo/exam_350.ipynb
@@ -2,24 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\t\thello\thello 123\n",
-      "\tnext\n",
-      "[['\\t', '\\t', 'h', 'e', 'l', 'l', 'o', '\\t', 'h', 'e', 'l', 'l', 'o', ' ', '1', '2', '3'], ['\\t', 'n', 'e', 'x', 't']]\n",
-      "123456123456hello\thello 123\n",
-      "123456next\n"
+      "        hello\thello 123\n",
+      "    next2\n",
+      "\n",
+      "    next3\n"
      ]
     }
    ],
    "source": [
-    "source = \"\t\thello\thello 123\\n\tnext\"\n",
-    "print(source)\n",
+    "source = \"\t\thello\thello 123\\n\tnext2\\n\\n\tnext3\"\n",
+    "# print(source)\n",
     "def listSplit(array):\n",
     "    temp2=[]\n",
     "    temp = list(array.split('\\n'))\n",
@@ -31,7 +30,7 @@
     "    for i in range(len(array)):\n",
     "        for y in range(len(array[i])):\n",
     "            if array[i][y] ==\"\t\" :\n",
-    "                array[i][y]=\"123456\"\n",
+    "                array[i][y]=\"    \"\n",
     "            else:\n",
     "                 break\n",
     "    for i in range(len(array)):\n",
