--- a/leehyunsoo/exam_410.ipynb
+++ b/leehyunsoo/exam_410.ipynb
@@ -43,6 +43,83 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "김씨:  2\n",
+      "이씨:  6\n",
+      "3\n",
+      "['권종표', '김지완', '김재성', '이유덕', '전경헌', '박민호', '박영서', '강상희', '이성연', '송정환', '최승혁', '이재영']\n",
+      "['강상희', '권종표', '김재성', '김지완', '박민호', '박영서', '송정환', '이성연', '이유덕', '이재영', '전경헌', '최승혁']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "name=\"이유덕,이재영,권종표,이재영,박민호,강상희,이재영,김지완,최승혁,이성연,박영서,박민호,전경헌,송정환,김재성,이유덕,전경헌\"\n",
+    "name_array = name.split(',')\n",
+    "\n",
+    "def Kim_Lee_count(name_array):\n",
+    "    counter = Counter([name[0] for name in name_array])\n",
+    "    print('김씨: ', counter['김'])\n",
+    "    print('이씨: ', counter['이'])\n",
+    "\n",
+    "def LeeJaeYoung_count(name_array):\n",
+    "    counter = Counter(name_array)\n",
+    "    print(counter['이재영'])\n",
+    "\n",
+    "Kim_Lee_count(name_array)\n",
+    "LeeJaeYoung_count(name_array)\n",
+    "\n",
+    "name_array_with_elim_redun = list(set(name_array))\n",
+    "print(name_array_with_elim_redun)\n",
+    "name_array_with_elim_redun.sort()\n",
+    "print(name_array_with_elim_redun)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['이',\n",
+       " '이',\n",
+       " '권',\n",
+       " '이',\n",
+       " '박',\n",
+       " '강',\n",
+       " '이',\n",
+       " '김',\n",
+       " '최',\n",
+       " '이',\n",
+       " '박',\n",
+       " '박',\n",
+       " '전',\n",
+       " '송',\n",
+       " '김',\n",
+       " '이',\n",
+       " '전']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[name[0] for name in name_array]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
