--- a/yoon/05_410.ipynb
+++ b/yoon/05_410.ipynb
@@ -36,6 +36,68 @@
     "sort_array = sorted(set_array)\n",
     "print(sort_array)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'> <class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = '이유덕'\n",
+    "print(type(arr[0]), type(arr[0:1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 김씨는 :  2 \n",
+      " 이씨는 :  6 \n",
+      " 이재영 :  3\n",
+      "['김재성', '박민호', '권종표', '전경헌', '강상희', '이재영', '이성연', '박영서', '이유덕', '송정환', '김지완', '최승혁']\n",
+      "['강상희', '권종표', '김재성', '김지완', '박민호', '박영서', '송정환', '이성연', '이유덕', '이재영', '전경헌', '최승혁']\n"
+     ]
+    }
+   ],
+   "source": [
+    "kim_count = 0\n",
+    "lee_count = 0\n",
+    "jy_count = 0\n",
+    "count = 0\n",
+    "original_array =['이유덕','이재영','권종표','이재영','박민호','강상희','이재영','김지완','최승혁','이성연','박영서','박민호','전경헌','송정환','김재성','이유덕','전경헌']\n",
+    "for i in range(len(original_array)):\n",
+    "    if original_array[i][0]=='김':\n",
+    "        kim_count+=1;\n",
+    "    elif original_array[i][0]=='이':\n",
+    "        lee_count+=1;\n",
+    "        if original_array[i]=='이재영':\n",
+    "            jy_count+=1;\n",
+    "print(' 김씨는 : ',kim_count ,'\\n','이씨는 : ',lee_count,'\\n','이재영 : ',jy_count)\n",
+    "set_array = list(set(original_array))\n",
+    "print(set_array)\n",
+    "sort_array = sorted(set_array)\n",
+    "print(sort_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
