코드 수정 및 추가

--- a/yoon/07_473.ipynb
+++ b/yoon/07_473.ipynb
@@ -2,38 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "5.435943603515625e-05\n",
       "29700\n"
      ]
     }
    ],
    "source": [
-    "time =3\n",
+    "import time\n",
+    "\n",
     "temp=[]\n",
     "string_array =[]\n",
     "\n",
-    "def timefun (time):\n",
-    "    time_save_60 = 0 #분에 3이 있는 경우\n",
-    "    time_save_24 = 0 #시에 3이 있는 경우\n",
+    "def timefun (S):\n",
+    "    cal_start_time = time.time()\n",
+    "    find_time = S\n",
+    "    time_save_min = 0 \n",
+    "    time_save_hor = 0 \n",
     "    for minit in range(60):\n",
     "        temp.append(minit)\n",
     "    \n",
     "    string_array =str(temp).split(', ')\n",
-    "    for m in range(60): \n",
-    "        \n",
-    "        if string_array[m].find('3') >-1: \n",
-    "            time_save_60+=1\n",
+    "    for m in range(60):\n",
+    "        if string_array[m].find(str(find_time)) >-1: \n",
+    "            time_save_min+=1\n",
     "            if int(string_array[m]) < 24:\n",
-    "                time_save_24+=1\n",
-    "    result = ((24-int(time_save_24))*int(time_save_60)+int(time_save_24)*60)*60\n",
+    "                time_save_hor+=1\n",
+    "    result = ((24-int(time_save_hor))*int(time_save_min)+int(time_save_hor)*60)*60\n",
+    "    cal_end_time = time.time()\n",
+    "    print(cal_end_time-cal_start_time)\n",
     "    print(result)\n",
-    "timefun(time)"
+    "timefun(3)"
    ]
   }
  ],
