--- a/yoon/Untitled.ipynb
+++ b/yoon/Untitled.ipynb
@@ -2,32 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 3 5 7 9 11 12 13\n",
-      "[ 11 , 12 ]\n",
-      "[ 12 , 13 ]\n"
+      "12344\n",
+      "14\n"
      ]
     }
    ],
    "source": [
-    "array_count=0\n",
-    "min_data=0\n",
-    "arraylist =[]\n",
-    "str_arr = input().split(' ')\n",
-    "arr = [int(i) for i in str_arr]\n",
-    "array_count =len(arr)\n",
-    "for j in range(array_count-1):\n",
-    "    arraylist.append(int(arr[int(j)+1])-int(arr[j]))\n",
-    "min_data =min(arraylist)\n",
-    "for j in range(len(arraylist)):\n",
-    "    if min_data == arraylist[j]:\n",
-    "        print(\"[\",arr[j],\",\",arr[int(j)+1],\"]\")"
+    "save_data = input()\n",
+    "def loop_(save_data):\n",
+    "    plus_data =0\n",
+    "    for i in range(len(save_data)):\n",
+    "        plus_data += int(save_data[i])\n",
+    "    print(plus_data)\n",
+    "    plus_data=0\n",
+    "cal_count(save_data)"
    ]
   }
  ],
