--- a/yoon/04_408.ipynb
+++ b/yoon/04_408.ipynb
@@ -2,33 +2,105 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+
+
+
+   "execution_count": 28,
+
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 3 5 7 9 11 12 13\n",
-      "[ 11 , 12 ]\n",
-      "[ 12 , 13 ]\n"
+
+
+
+
+
+      "[ 3 , 4 ]\n"
+
      ]
     }
    ],
    "source": [
-    "array_count=0\n",
-    "min_data=0\n",
-    "arraylist =[]\n",
-    "str_arr = input().split(' ')\n",
-    "arr = [int(i) for i in str_arr]\n",
+    "arr = [1, 3, 4, 8, 13, 17, 20]\n",
     "array_count =len(arr)\n",
+    "diff_list = []\n",
     "for j in range(array_count-1):\n",
-    "    arraylist.append(int(arr[int(j)+1])-int(arr[j]))\n",
-    "min_data =min(arraylist)\n",
-    "for j in range(len(arraylist)):\n",
-    "    if min_data == arraylist[j]:\n",
+    "    diff_list.append(arr[j+1] - arr[j])\n",
+    "min_diff =min(diff_list)\n",
+    "for j in range(len(diff_list)):\n",
+    "    if min_diff == diff_list[j]:\n",
     "        print(\"[\",arr[j],\",\",arr[int(j)+1],\"]\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min([1, 3, 4, 8, 13, 17, 20])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 4]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min([[6, 1], [3, 4], [4, 8]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[3, 11118] > [3, 5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
