--- a/leehyunsoo/exam_410.ipynb
+++ b/leehyunsoo/exam_410.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,16 +11,16 @@
      "text": [
       "김씨 : 2, 이씨 : 3\n",
       "이재영 : 3\n",
-      "['이성연', '권종표', '전경헌', '김지완', '강상희', '박민호', '김재성', '이유덕', '최승혁', '이재영', '송정환', '박영서']\n",
+      "['송정환', '김지완', '최승혁', '이재영', '김재성', '강상희', '이성연', '박민호', '박영서', '전경헌', '이유덕', '권종표']\n",
       "['강상희', '권종표', '김재성', '김지완', '박민호', '박영서', '송정환', '이성연', '이유덕', '이재영', '전경헌', '최승혁']\n"
      ]
     }
    ],
    "source": [
     "name=\"이유덕,이재영,권종표,이재영,박민호,강상희,이재영,김지완,최승혁,이성연,박영서,박민호,전경헌,송정환,김재성,이유덕,전경헌\"\n",
-    "name_array = list(name.split(','))\n",
+    "name_array = name.split(',')\n",
     "\n",
-    "def Kim_Lee_count(name_array):\n",
+    "def Kim_Lee_count(name):\n",
     "    temp_array = list(set(name_array))\n",
     "    kim_count=0\n",
     "    lee_count=0\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
       "김씨:  2\n",
       "이씨:  6\n",
       "3\n",
-      "['권종표', '김지완', '김재성', '이유덕', '전경헌', '박민호', '박영서', '강상희', '이성연', '송정환', '최승혁', '이재영']\n",
+      "['송정환', '김지완', '최승혁', '이재영', '김재성', '강상희', '이성연', '박민호', '박영서', '전경헌', '이유덕', '권종표']\n",
       "['강상희', '권종표', '김재성', '김지완', '박민호', '박영서', '송정환', '이성연', '이유덕', '이재영', '전경헌', '최승혁']\n"
      ]
     }
@@ -84,39 +84,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['이',\n",
-       " '이',\n",
-       " '권',\n",
-       " '이',\n",
-       " '박',\n",
-       " '강',\n",
-       " '이',\n",
-       " '김',\n",
-       " '최',\n",
-       " '이',\n",
-       " '박',\n",
-       " '박',\n",
-       " '전',\n",
-       " '송',\n",
-       " '김',\n",
-       " '이',\n",
-       " '전']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "김씨 :  2 이씨 :  6\n",
+      "이재영 :  3\n",
+      "['송정환', '김지완', '최승혁', '이재영', '김재성', '강상희', '이성연', '박민호', '박영서', '전경헌', '이유덕', '권종표']\n",
+      "['강상희', '권종표', '김재성', '김지완', '박민호', '박영서', '송정환', '이성연', '이유덕', '이재영', '전경헌', '최승혁']\n"
+     ]
     }
    ],
    "source": [
-    "[name[0] for name in name_array]"
+    "name=\"이유덕,이재영,권종표,이재영,박민호,강상희,이재영,김지완,최승혁,이성연,박영서,박민호,전경헌,송정환,김재성,이유덕,전경헌\"\n",
+    "\n",
+    "def Kim_Lee_count2(name):\n",
+    "    temp_array = name.split(',')\n",
+    "    kim_count=0\n",
+    "    lee_count=0\n",
+    "    for i in range(len(temp_array)):\n",
+    "        kim_count += 1 if temp_array[i][0]==\"김\" else 0\n",
+    "        lee_count += 1 if temp_array[i][0]==\"이\" else 0\n",
+    "    return kim_count,lee_count\n",
+    "    \n",
+    "def LeeJaeYoung_count2(name):\n",
+    "    temp_array = name.split(',')\n",
+    "    leejaeyoung_count = 0\n",
+    "    for i in range(len(temp_array)):\n",
+    "        leejaeyoung_count += 1 if temp_array[i]==\"이재영\" else 0\n",
+    "    return leejaeyoung_count\n",
+    "\n",
+    "Kim_Lee_result=Kim_Lee_count2(name)\n",
+    "\n",
+    "print(\"김씨 : \",Kim_Lee_result[0],\"이씨 : \",Kim_Lee_result[1]) #question.01\n",
+    "print(\"이재영 : \",LeeJaeYoung_count2(name))                          #question.02\n",
+    "\n",
+    "name_array = list(set(name.split(',')))\n",
+    "\n",
+    "print(name_array)                                                                  #question.03\n",
+    "\n",
+    "name_array.sort()\n",
+    "print(name_array)                                                                  #question.04"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
