--- a/leehyunsoo/exam_414.ipynb
+++ b/leehyunsoo/exam_414.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -44,6 +44,24 @@
     "def swap2(array):\n",
     "    return [x for x in array if x<0]+[x for x in array if x>=0]\n",
     "print(swap2(n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = [-1,2,3,-4,5,-10,6,-8,9,]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert swap(n) == swap2(n)"
    ]
   },
   {
