--- a/leehyunsoo/exam_473.ipynb
+++ b/leehyunsoo/exam_473.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -14,21 +14,50 @@
     }
    ],
    "source": [
-    "time=\"\"\n",
-    "total_sec=0\n",
-    "for x in range(24):\n",
-    "    for y in range(60):\n",
-    "        if(\"3\" in str(x) or \"3\" in str(y)):\n",
-    "            total_sec+=60\n",
-    "print(total_sec)"
+    "def time_check():\n",
+    "    time=\"\"\n",
+    "    total_sec=0\n",
+    "    for x in range(24):\n",
+    "        for y in range(60):\n",
+    "            if(\"3\" in str(x) or \"3\" in str(y)):\n",
+    "                total_sec+=60\n",
+    "    return total_sec\n",
+    "print(time_check())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29700\n"
+     ]
+    }
+   ],
+   "source": [
+    "#time 제거\n",
+    "def time_check2():\n",
+    "    total_sec=0\n",
+    "    for x in range(24):\n",
+    "        for y in range(60):\n",
+    "            if(\"3\" in str(x) or \"3\" in str(y)):\n",
+    "                total_sec+=60\n",
+    "    return total_sec\n",
+    "print(time_check2())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "assert time_check()==time_check2()"
+   ]
   },
   {
    "cell_type": "code",
