--- a/leehyunsoo/exam_478.ipynb
+++ b/leehyunsoo/exam_478.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -24,8 +24,43 @@
     "sum_=0\n",
     "for x in range(count):\n",
     "    sum_ +=int(input())\n",
-    "print((\"합 :  %d, 평균 : %d\")%(sum_ , int(sum_/5)))\n",
+    "print((\"합 :  %d, 평균 : %d\")%(sum_ , int(sum_/count)))\n",
     "del count,sum_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "사용할 숫자의 개수를 입력하세요 :3\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "합 :  6 평균 :  2\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = int(input(\"사용할 숫자의 개수를 입력하세요 :\"))\n",
+    "def sum_num(n):\n",
+    "    sum_=0\n",
+    "    for x in range(n):\n",
+    "        sum_ +=int(input())  \n",
+    "    return sum_ \n",
+    "\n",
+    "def average_num(n,count):\n",
+    "    return int(n/count)\n",
+    "\n",
+    "sum_=sum_num(count)\n",
+    "average_=average_num(sum_,count)\n",
+    "\n",
+    "print(\"합 : \",sum_,\"평균 : \", average_)\n",
+    "del count, sum_, average_"
    ]
   },
   {
@@ -33,9 +68,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
