--- a/leehyunsoo/exam_484.ipynb
+++ b/leehyunsoo/exam_484.ipynb
@@ -70,6 +70,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num_goat_3_0\n"
+     ]
+    }
+   ],
+   "source": [
+    "source_str = \"numGoat30\"\n",
+    "\n",
+    "def change_word2(array):\n",
+    "    result=[]\n",
+    "    for ind in array:\n",
+    "        if ind.isupper():\n",
+    "            result.append(\"_\"+ind.lower())\n",
+    "        elif ind.isdigit():\n",
+    "            result.append(\"_\" + ind)\n",
+    "        else :\n",
+    "            result.append(ind)\n",
+    "    return \"\".join(result)\n",
+    "\n",
+    "print(change_word2(source_str))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
