--- a/leehyunsoo/exam_488.ipynb
+++ b/leehyunsoo/exam_488.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -29,28 +29,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[False, False, False, True, False]"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False, False, False, True, False]\n"
+     ]
     }
    ],
    "source": [
     "def check2(array):\n",
-    "    result=[]\n",
-    "    for i in range(len(array)):\n",
-    "        result.append(False if len(array[i])==10 and len(list(array[i])) == len(list(set(array[i]))) else True)\n",
-    "    print(result)\n",
-    "check(input_array)"
+    "    result = []\n",
+    "    for ind in array:\n",
+    "        result += [True if len(ind) == 10 and len(ind) == len(set(ind)) else False]\n",
+    "    return result\n",
+    "print(check2(input_array))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert check(input_array) == check2(input_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
