--- a/leehyunsoo/exam_505.ipynb
+++ b/leehyunsoo/exam_505.ipynb
@@ -2,29 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1', '0', '1', '1']\n"
+      "['1', '0', '0', '1', '1', '0']\n"
      ]
     }
    ],
    "source": [
     "temp = [x for x in range(10,16)]\n",
     "total=[]\n",
-    "# for i in range(10,16):\n",
-    "#     total = [str(x) for x in temp]\n",
-    "#     print(total)\n",
-    "num=[10,11]\n",
-    "for i in range(2):\n",
+    "num=[100,110]\n",
+    "for i in range(len(num)):\n",
     "    for y in range(len(str(num[i]))):\n",
-    "        total += str(num[i])[y]\n",
+    "        total+=[str(num[i])[y]]\n",
     "#     total.append(str(num[i]))\n",
     "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025 ------ 14998500\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_10 = 0\n",
+    "num_100=0\n",
+    "def ten(n):\n",
+    "    return 45*(n)\n",
+    "def hun(n):\n",
+    "    return 45*n*(n+1)\n",
+    "\n",
+    "for i in range(10):\n",
+    "    num_10 += ten(i)\n",
+    "    \n",
+    "for i in range(100):\n",
+    "    num_100 += hun(i)\n",
+    "print(num_10,\"------\",num_100)"
    ]
   },
   {
