--- a/leehyunsoo/exam_408.ipynb
+++ b/leehyunsoo/exam_408.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "( 1, 3)( 3, 4)( 4, 5)( 5, 6)\n"
+      "(3,4)(4,5)(5,6)\n"
      ]
     }
    ],
@@ -20,13 +20,42 @@
     "    point = 99999\n",
     "    for i in range(len(array)-1):\n",
     "        diff= abs(array[i]-array[i+1])\n",
-    "        if point>=diff :\n",
+    "        if point>diff :\n",
     "            point = diff\n",
-    "#             result.append(array[i])\n",
-    "#             result.append(array[i+1])\n",
-    "            result+=\"(%d, %d)\"%(array[i],array[i+1])\n",
-    "    print(result)\n",
-    "func(S)"
+    "            result=\"(%d,%d)\"%(array[i],array[i+1])\n",
+    "        elif point == diff:\n",
+    "            result+=\"(%d,%d)\"%(array[i],array[i+1])\n",
+    "    return result\n",
+    "print(func(S))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3, 4], [4, 5], [5, 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def func2(array):\n",
+    "    result=[]\n",
+    "    point = 99999\n",
+    "    for i in range(len(array)-1):\n",
+    "        diff= abs(array[i]-array[i+1])\n",
+    "        if point>diff :\n",
+    "            point = diff\n",
+    "            result =[[array[i],array[i+1]]]\n",
+    "        elif point == diff:\n",
+    "            result+= [[array[i],array[i+1]]]\n",
+    "            \n",
+    "    return result\n",
+    "print(func2(S))"
    ]
   },
   {
