--- a/leehyunsoo/exam_492.ipynb
+++ b/leehyunsoo/exam_492.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -13,19 +13,20 @@
       "OOOOXX\n",
       "OOOXXX\n",
       "OOXXXX\n",
-      "OXXXXX\n"
+      "OXXXXX\n",
+      "XXXXXX\n"
      ]
     }
    ],
    "source": [
     "n=6\n",
-    "for row in range(1,n):\n",
+    "for row in range(1,n+1):\n",
     "    print(\"O\"*(n-row)+\"X\"*row)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -36,15 +37,43 @@
       "OOOOXX\n",
       "OOOXXX\n",
       "OOXXXX\n",
-      "OXXXXX\n"
+      "OXXXXX\n",
+      "XXXXXX\n"
      ]
     }
    ],
    "source": [
     "def printO(n):\n",
-    "    for row in range(1,n):\n",
+    "    for row in range(1,n+1):\n",
     "        print(\"O\"*(n-row)+\"X\"*row)\n",
     "printO(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OOOOOX\n",
+      "OOOOXX\n",
+      "OOOXXX\n",
+      "OOXXXX\n",
+      "OXXXXX\n",
+      "XXXXXX\n"
+     ]
+    }
+   ],
+   "source": [
+    "def printO(n):\n",
+    "    result=[]\n",
+    "    for row in range(1,n+1):\n",
+    "        result+=[\"O\"*(n-row)+\"X\"*row]\n",
+    "    return result\n",
+    "print(\"\\n\".join(printO(n)))"
    ]
   },
   {
