--- a/yoon/07_473.ipynb
+++ b/yoon/07_473.ipynb
@@ -2,16 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.435943603515625e-05\n",
-      "29700\n"
+      "5.888938903808594e-05\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "29700"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -21,7 +30,7 @@
     "string_array =[]\n",
     "\n",
     "def timefun (S):\n",
-    "    cal_start_time = time.time()\n",
+    "    cal_start_time = time.time() #시간확인\n",
     "    find_time = S\n",
     "    time_save_min = 0 \n",
     "    time_save_hor = 0 \n",
@@ -36,8 +45,8 @@
     "                time_save_hor+=1\n",
     "    result = ((24-int(time_save_hor))*int(time_save_min)+int(time_save_hor)*60)*60\n",
     "    cal_end_time = time.time()\n",
-    "    print(cal_end_time-cal_start_time)\n",
-    "    print(result)\n",
+    "    print(cal_end_time-cal_start_time) #시간확인 \n",
+    "    return result\n",
     "timefun(3)"
    ]
   }
