--- a/yoon/07_473.ipynb
+++ b/yoon/07_473.ipynb
@@ -2,50 +2,72 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.888938903808594e-05\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "29700"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import time\n",
-    "\n",
-    "temp=[]\n",
-    "string_array =[]\n",
-    "\n",
     "def timefun (S):\n",
-    "    cal_start_time = time.time() #시간확인\n",
-    "    find_time = S\n",
+    "    input_time = S\n",
+    "    temp=[]\n",
+    "    string_array =[]\n",
     "    time_save_min = 0 \n",
-    "    time_save_hor = 0 \n",
+    "    time_save_hur = 0 \n",
     "    for minit in range(60):\n",
-    "        temp.append(minit)\n",
-    "    \n",
+    "        temp.append(minit)   \n",
     "    string_array =str(temp).split(', ')\n",
     "    for m in range(60):\n",
-    "        if string_array[m].find(str(find_time)) >-1: \n",
+    "        if string_array[m].find(str(input_time)) >-1: \n",
     "            time_save_min+=1\n",
     "            if int(string_array[m]) < 24:\n",
-    "                time_save_hor+=1\n",
-    "    result = ((24-int(time_save_hor))*int(time_save_min)+int(time_save_hor)*60)*60\n",
-    "    cal_end_time = time.time()\n",
-    "    print(cal_end_time-cal_start_time) #시간확인 \n",
+    "                time_save_hur+=1\n",
+    "    result = ((24-int(time_save_hur))*int(time_save_min)+int(time_save_hur)*60)*60\n",
+    "    return result\n",
+    "timefun(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29700"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def timefun (S):\n",
+    "    input_time = S\n",
+    "    temp=[]\n",
+    "    string_array =[]\n",
+    "    time_save_min = 0 \n",
+    "    time_save_hur = 0 \n",
+    "    for minit in range(60):\n",
+    "        temp.append(minit)   \n",
+    "    string_array =str(temp).split(', ')\n",
+    "    for m in range(60):\n",
+    "        if string_array[m].find(str(input_time)) >-1: \n",
+    "            time_save_min+=1\n",
+    "            if int(string_array[m]) < 24:\n",
+    "                time_save_hur+=1\n",
+    "    result = ((24-int(time_save_hur))*int(time_save_min)+int(time_save_hur)*60)*60\n",
     "    return result\n",
     "timefun(3)"
    ]
