--- a/yoon/07_473.ipynb
+++ b/yoon/07_473.ipynb
@@ -84,23 +84,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[3, 13, 23]"
+       "3"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hours_contains_3 = [h for h in range(24) if '3' in str(h)]\n",
-    "hours_contains_3"
+    "hours_contains_3 = [h for h in range(24) if '3' in str(h) ]\n",
+    "len(hours_contains_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "minutes_contains_3 = [m for m in range(60) if '3' in str(m)]\n",
+    "len(minutes_contains_3)"
    ]
   },
   {
@@ -109,27 +130,51 @@
    "metadata": {},
    "outputs": [
     {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-7-d69e77499c70>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-d69e77499c70>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    hours_contains_3 = [h for h in range(24) if '3' in str(h) else]\u001b[0m\n\u001b[0m                                                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "hours_contains_3 = [h for h in range(24) if '3' in str(h) else]\n",
+    "len(hours_contains_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[3, 13, 23, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 43, 53]"
+       "24"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "minutes_contains_3 = [m for m in range(60) if '3' in str(m)]\n",
-    "minutes_contains_3"
+    "def time_fun (number):\n",
+    "    minutes = [m for m in range(60) if str(number) in str(m)]\n",
+    "    hours = [m for m in range(24) if str(number) in str(m)]\n",
+    "    print(len(hours),len(minutes))\n",
+    "    result = ((24-len(hours))*len(minutes)+len(hours)*60)\n",
+    "    return result\n",
+    "time_fun(24)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
