--- a/leehyunsoo/exam_490.ipynb
+++ b/leehyunsoo/exam_490.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14\n"
+      "17\n"
      ]
     }
    ],
    "source": [
     "origin_machine_price = 10\n",
-    "origin_merchine_per = 100\n",
+    "origin_merchine_per = 150\n",
     "ext_part_price = 3\n",
     "ext_part_per = [30,70,15,40,65]\n",
     "ext_part_per.sort(reverse=True)\n",
@@ -30,21 +30,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17\n"
+      "18\n"
      ]
     }
    ],
    "source": [
-    "part_array = [30,70,15,40,65]\n",
+    "part_array = [30,70,60,40,65]\n",
     "\n",
-    "def performance_ratio(part_array):\n",
+    "def perfomance_ratio(part_array):\n",
     "    part_array.sort(reverse=True)\n",
     "    result = []\n",
     "    for perfo in part_array:\n",
@@ -53,6 +53,48 @@
     "    return int((sum(result)+150)/(len(result)*3+10))\n",
     "\n",
     "print(performance_ratio(part_array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "CONST_PRICE = 10 #asdf\n",
+    "CONST_PERFOMANCE = 150 #asdf\n",
+    "part_price = 3\n",
+    "part_perfomance = [30,70,60,40,65]\n",
+    "\n",
+    "def perfomance_ratio2(perfomance, price):\n",
+    "    perfomance.sort(reverse = True)\n",
+    "    result = 0\n",
+    "    count = 0\n",
+    "    for ind in perfomance :\n",
+    "        if ((CONST_PERFOMANCE / CONST_PRICE ) < ind / price) :\n",
+    "            result += ind \n",
+    "            count += 1\n",
+    "    result = (result + CONST_PERFOMANCE)/(count*3 + CONST_PRICE)\n",
+    "    return int(result)\n",
+    "\n",
+    "print(perfomance_ratio2(part_perfomance,part_price))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert perfomance_ratio(part_perfomance) == perfomance_ratio2(part_perfomance,part_price)"
    ]
   },
   {
