--- a/leehyunsoo/exam_492.ipynb
+++ b/leehyunsoo/exam_492.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,43 @@
     "    for row in range(1,n+1):\n",
     "        result+=[\"O\"*(n-row)+\"X\"*row]\n",
     "    return result\n",
+    "\n",
     "print(\"\\n\".join(printO(n)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OOOOOX\n",
+      "OOOOXX\n",
+      "OOOXXX\n",
+      "OOXXXX\n",
+      "OXXXXX\n",
+      "XXXXXX\n"
+     ]
+    }
+   ],
+   "source": [
+    "def printO2(n):    \n",
+    "    result=[(\"O\"*(n-row) + \"X\"*row )for row in range(1,n+1)]\n",
+    "    return result\n",
+    "\n",
+    "print(\"\\n\".join(printO2(n)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert printO(n) == printO2(n)"
    ]
   },
   {
